// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> primitive extended 1`] = `
.c1 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

.c0 {
  line-height: 2;
}

<StyledText>
  <TextPrimitive
    className="c0"
  >
    <Paragraph
      className="c0"
      color="black"
      element="p"
      size="regular"
      spacing="md"
      underline={false}
      weight="regular"
    >
      <Primitive
        className="c0 c1"
        color="black"
        element="p"
        size="regular"
        spacing="md"
        underline={false}
        weight="regular"
      >
        <p
          className="c0 c1"
        >
          extended text test
        </p>
      </Primitive>
    </Paragraph>
  </TextPrimitive>
</StyledText>
`;

exports[`<Text /> primitive should render correctly based on color prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

<TextPrimitive
  color="grey"
  element="p"
>
  <Paragraph
    color="grey"
    element="p"
    size="regular"
    spacing="md"
    underline={false}
    weight="regular"
  >
    <Primitive
      className="c0"
      color="grey"
      element="p"
      size="regular"
      spacing="md"
      underline={false}
      weight="regular"
    >
      <p
        className="c0"
      >
        color prop test
      </p>
    </Primitive>
  </Paragraph>
</TextPrimitive>
`;

exports[`<Text /> primitive should render correctly based on element prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

<TextPrimitive
  element="h3"
>
  <Paragraph
    color="black"
    element="h3"
    size="regular"
    spacing="md"
    underline={false}
    weight="regular"
  >
    <Primitive
      className="c0"
      color="black"
      element="h3"
      size="regular"
      spacing="md"
      underline={false}
      weight="regular"
    >
      <h3
        className="c0"
      >
        element prop test
      </h3>
    </Primitive>
  </Paragraph>
</TextPrimitive>
`;

exports[`<Text /> primitive should render correctly based on size prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 14px;
  line-height: 1.12;
}

<TextPrimitive
  element="p"
  size="tiny"
>
  <Paragraph
    color="black"
    element="p"
    size="tiny"
    spacing="md"
    underline={false}
    weight="regular"
  >
    <Primitive
      className="c0"
      color="black"
      element="p"
      size="tiny"
      spacing="md"
      underline={false}
      weight="regular"
    >
      <p
        className="c0"
      >
        size prop test
      </p>
    </Primitive>
  </Paragraph>
</TextPrimitive>
`;

exports[`<Text /> primitive should render correctly based on underline prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: underline;
  font-size: 18px;
  line-height: 1.12;
}

<TextPrimitive
  color="grey"
  element="p"
  underline={true}
>
  <Paragraph
    color="grey"
    element="p"
    size="regular"
    spacing="md"
    underline={true}
    weight="regular"
  >
    <Primitive
      className="c0"
      color="grey"
      element="p"
      size="regular"
      spacing="md"
      underline={true}
      weight="regular"
    >
      <p
        className="c0"
      >
        underline prop test
      </p>
    </Primitive>
  </Paragraph>
</TextPrimitive>
`;

exports[`<Text /> primitive should render correctly based on variant prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 26px;
  line-height: 28px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 30px;
    line-height: 32px;
  }
}

@media (min-width:768px) {
  .c0 {
    font-size: 32px;
    line-height: 35px;
  }
}

<TextPrimitive
  element="h3"
  variant="h2"
>
  <H2
    color="black"
    element="h3"
    spacing="md"
    underline={false}
    weight="regular"
  >
    <Primitive
      className="c0"
      color="black"
      element="h3"
      spacing="md"
      underline={false}
      weight="regular"
    >
      <h3
        className="c0"
      >
        variant prop test
      </h3>
    </Primitive>
  </H2>
</TextPrimitive>
`;

exports[`<Text /> primitive should render correctly based on weight prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

<TextPrimitive
  element="p"
  weight="light"
>
  <Paragraph
    color="black"
    element="p"
    size="regular"
    spacing="md"
    underline={false}
    weight="light"
  >
    <Primitive
      className="c0"
      color="black"
      element="p"
      size="regular"
      spacing="md"
      underline={false}
      weight="light"
    >
      <p
        className="c0"
      >
        weight prop test
      </p>
    </Primitive>
  </Paragraph>
</TextPrimitive>
`;

exports[`<Text /> primitive with default props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

<TextPrimitive>
  <Paragraph
    color="black"
    element="p"
    size="regular"
    spacing="md"
    underline={false}
    weight="regular"
  >
    <Primitive
      className="c0"
      color="black"
      element="p"
      size="regular"
      spacing="md"
      underline={false}
      weight="regular"
    >
      <p
        className="c0"
      >
        default prop test
      </p>
    </Primitive>
  </Paragraph>
</TextPrimitive>
`;

exports[`<TextPrimitive /> with initial props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

<TextPrimitive>
  <Paragraph
    color="black"
    element="p"
    size="regular"
    spacing="md"
    underline={false}
    weight="regular"
  >
    <Primitive
      className="c0"
      color="black"
      element="p"
      size="regular"
      spacing="md"
      underline={false}
      weight="regular"
    >
      <p
        className="c0"
      >
        Test initial
      </p>
    </Primitive>
  </Paragraph>
</TextPrimitive>
`;
